<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent">

            <ImageView
                android:id="@+id/close_button"
                style="@style/CloseColorImage"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_marginStart="21dp"
                android:layout_marginTop="26dp"
                android:layout_marginBottom="23dp"
                android:src="@drawable/ic_close"
                app:layout_constraintBottom_toTopOf="@+id/cardView"
                app:layout_constraintEnd_toStartOf="@+id/save_button"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:layout_marginBottom="23dp"
                android:layout_marginEnd="16dp"
                android:text="@string/save_button_text"
                app:layout_constraintBottom_toTopOf="@+id/cardView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5"

                android:textColor="?attr/colorAccent"
                android:background="@android:color/transparent"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="96dp"
                android:elevation="2dp"
                app:cardCornerRadius="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:gravity="start|top"
                    android:hint="@string/input_note_hint"
                    android:maxLines="40"
                    android:minLines="5"
                    android:padding="16dp"
                    android:textSize="16sp"
                    android:fontFamily="@font/roboto_regular"
                    android:background="@android:color/transparent"
                    android:textColor="@drawable/edit_text_color"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/importance_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="28dp"
                android:textSize="16sp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/importance_text"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />

            <TextView
                style="@style/GrayElements"
                android:id="@+id/importance_button"
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:textSize="14sp"
                android:text="@string/no"
                android:fontFamily="@font/roboto_regular"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/importance_text" />

            <View
                style="@style/GrayElements"
                android:id="@+id/grayLine"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/importance_button"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp" />

            <TextView
                android:id="@+id/until_do"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/until_do"
                app:layout_constraintTop_toBottomOf="@id/grayLine"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="16sp"
                android:fontFamily="@font/roboto_regular"
                android:layout_marginTop="26.5dp"
                android:layout_marginStart="16dp" />

            <TextView
                android:id="@+id/deadline_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorAccent"
                tools:text="dd-MM-yyyy"
                android:fontFamily="@font/roboto_regular"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/until_do"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp" />


            <TextView
                android:id="@+id/creation_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:textColor="?attr/colorAccent"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/creation_textView"
                app:layout_constraintTop_toBottomOf="@+id/creation_textView"
                android:layout_marginTop="4dp"
                app:layout_goneMarginTop="26.5dp"
                tools:text="dd-MM-yyyy"/>

            <TextView
                android:id="@+id/creation_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/creation_date"
                android:textSize="16sp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                app:layout_goneMarginTop="26.5dp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/deadline_text"
                tools:visibility="visible" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/deadline_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="26.5dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@id/until_do"
                app:layout_constraintTop_toBottomOf="@id/grayLine" />

            <View
                android:id="@+id/second_gray_line"
                style="@style/GrayElements"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/creation_date" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/delete_button"
                android:theme="@style/GrayElements"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="23dp"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@id/second_gray_line"
                app:layout_constraintStart_toStartOf="parent"
                android:clickable="false">

                <ImageView
                    android:id="@+id/delete_button_image"
                    style="@style/GrayElements"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_delete"/>

                <TextView
                    android:id="@+id/delete_button_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:textSize="17sp"
                    android:text="@string/delete"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>