<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="164dp"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapse_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:collapsedTitleTextAppearance="@style/TextAppearance.MyApp.Title.Collapsed"
                app:expandedTitleMarginBottom="44dp"
                app:expandedTitleMarginEnd="154dp"
                app:expandedTitleMarginStart="60dp"
                app:expandedTitleMarginTop="82dp"
                app:expandedTitleTextAppearance="@style/TextAppearance.MyApp.Title.Expanded"
                app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
                app:title="@string/what_Im_doing">

                <TextView
                    android:id="@+id/completed_todo_textView"
                    style="@style/GrayElements"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_marginStart="61dp"
                    android:layout_marginTop="126dp"
                    android:layout_marginBottom="18dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/complete_task"
                    android:textSize="16sp"
                    app:layout_collapseMode="parallax" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/main_todo_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/hide_or_show_com_task_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="121dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="12dp"
                    android:background="@android:color/transparent"
                    android:fitsSystemWindows="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_show_completed_tasks"
                    android:tint="#007AFF"
                    app:layout_collapseMode="pin"
                    android:visibility="visible" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/refresh_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="121dp"
                    android:layout_marginEnd="80dp"
                    android:layout_marginBottom="12dp"
                    android:background="@android:color/transparent"
                    android:fitsSystemWindows="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_refresh_data"
                    android:tint="#007AFF"
                    app:layout_collapseMode="pin"
                    android:visibility="gone"/>

                <ProgressBar
                    android:id="@+id/main_fragment_progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="121dp"
                    android:layout_marginEnd="80dp"
                    android:layout_marginBottom="12dp"
                    android:background="@android:color/transparent"
                    android:fitsSystemWindows="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_refresh_data"
                    android:tint="#007AFF"
                    app:layout_collapseMode="pin"
                    android:visibility="gone"/>

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/no_internet_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="121dp"
                    android:layout_marginEnd="80dp"
                    android:layout_marginBottom="12dp"
                    android:background="@android:color/transparent"
                    android:backgroundTint="@color/red"
                    android:fitsSystemWindows="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_internet_not_available"
                    android:visibility="gone"
                    app:layout_collapseMode="pin"/>


            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/recycler_view_root_cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:elevation="2dp"
            android:padding="19dp"
            app:cardCornerRadius="8dp"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/main_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </androidx.cardview.widget.CardView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_button"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="40dp"
            android:backgroundTint="#007AFF"
            android:contentDescription="@string/add_new_todo"
            android:src="@drawable/ic_fab_add"
            android:tint="@color/white" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>